<resources>
    <string name="app_name">Go4Launch</string>
    <string name="slogan">Find a nice restaurant and invite your co-workers for lunch !</string>
    <string name="facebook_btn">Sign in with Facebook</string>
    <string name="google_btn">Sign in with Google</string>
    <string name="main_toolbar_text">I\'m Hungry !</string>
    <string name="authentication_error">Authentication Failed</string>
    <string name="connexion_error">Connexion : failed</string>
    <string name="connexion_canceled">Connexion : canceled</string>
    <string name="user_creation_fail">An error occurred</string>

    //FOR authentication
    <string name="default_web_api_key">AIzaSyCAN_KzcnTVx_TanS_bXdOK5CnlgI8_zj4</string>
    <string name="facebook_app_id">455689618303467</string>
    <string name="fb_login_protocol_scheme">fb455689618303467</string>

    //Menu Nav Drawer
    <string name="lunch_item">YOUR LUNCH</string>
    <string name="settings_item">SETTINGS</string>
    <string name="logout_item">LOGOUT</string>

    //BOTTOM NAV VIEW
    <string name="navBottom_map_view">Map View</string>
    <string name="navBottom_list_view">List View</string>
    <string name="navBottom_workmates">Workmates</string>

    <string name="title_activity_maps">Map</string>

    //ACTION DETAIL RESTAURANT
    <string name="dialogRestaurant_call">CALL</string>
    <string name="dialogRestaurant_like">LIKE</string>
    <string name="dialogRestaurant_website">WEBSITE</string>

    //DETAILS ACTIVITY
    <string name="displayDetailsError">An error occurs when displaying details</string>
    <string name="errorWhenSaveInDatabase">An error occurs when tying to save your lunch</string>

    // TEXT RECYCLERVIEW CARD + HOURS DIALOG
    <string name="workmateChipSingle">Workmate :</string>
    <string name="workmateChipMultiple">Workmates :</string>
    <string name="unavailable">Unavailable</string>
    <string name="chip_hours_open">Open Now</string>
    <string name="chip_hours_close">Close Now</string>
    <string name="dialog_restaurant_title">Opening Hours :</string>

    // CHAT
    <string name="message_hint">Write a message</string>
    <string name="message_supress_error">Error when deleting</string>
    <string name="message_send_fail">Error when sending message</string>
    <string name="message_reception_fail">Undelivered message</string>

    //WORKMATE ITEM TEXT
    <string name="restaurant_has_chosen">vote for</string>
    <string name="restaurant_has_not_chosen">hasen\'t decided yet</string>

    //HOME ACTIVITY
    <string name="lunch_not_selected">You haven\'t already chosen a restaurant</string>
    <string name="lunch_fetching_error">Impossible to show your lunch</string>

    //NOTIFICATION
    <string name="notification_channel_name">Lunch Reminder</string>
    <string name="notification_channel_description">Notify user about his lunch at 12:00 everyday</string>
    <string name="notification_title">Lunch is Ready !</string>
    <string name="notification_rendez_vous">Go to</string>
    <string name="notification_rendez_vous_with"> with :</string>

    //SETTINGS ACTIVITY
    <string name="settings_activity_title">Settings</string>
    <string name="settings_activity_notifications">Notifications</string>

    //LIST FRAGMENT
    <string name="list_fragment_message_title">Your map does not contain any restaurant</string>
    <string name="list_fragment_message_advice">Try to click on Location button in your map</string>

    //TOOLBAR MENU
    <string name="toolbar_main_menu_search">Search</string>
    <string name="toolbar_main_menu_refresh">Refresh</string>

</resources>
