<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/main_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_lunch_item"
            android:title="@string/lunch_item"
            android:checkable="true"
            android:icon="@drawable/round_restaurant_menu_white_48"/>
        <item
            android:id="@+id/menu_settings_item"
            android:title="@string/settings_item"
            android:checkable="true"
            android:icon="@drawable/round_settings_white_48"/>
        <item
            android:id="@+id/menu_logout_item"
            android:title="@string/logout_item"
            android:checkable="true"
            android:icon="@drawable/round_power_settings_new_white_48"/>
    </group>

</menu>