<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alwaysDrawnWithCache="false"
    android:background="@drawable/background_main"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/activity_main_imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/app_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activity_main_appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/activity_main_imageView"
        app:layout_constraintRight_toRightOf="@id/activity_main_imageView"
        app:layout_constraintTop_toBottomOf="@id/activity_main_imageView" />

    <TextView
        android:id="@+id/activity_main_slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slogan"
        android:textColor="@color/whiteText"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintLeft_toLeftOf="@id/activity_main_appName"
        app:layout_constraintRight_toRightOf="@id/activity_main_appName"
        app:layout_constraintTop_toBottomOf="@id/activity_main_appName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/activity_main_facebook_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_button_facebook"
            android:drawableStart="@drawable/logo_facebook"
            android:padding="15dp"
            android:text="@string/facebook_btn"
            android:textAllCaps="false"
            android:textColor="@color/whiteText" />

        <Button
            android:id="@+id/activity_main_google_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_button_google"
            android:drawableStart="@drawable/logo_google"
            android:padding="15dp"
            android:text="@string/google_btn"
            android:textAllCaps="false"
            android:textColor="@color/whiteText" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>