<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/details_activity_restaurant_image"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentTop="true"
        android:scaleType="centerCrop"
        tools:src="@drawable/background_main" />

    <LinearLayout
        android:id="@+id/text_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/details_activity_restaurant_image">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@color/go4lunchPrimary">

            <TextView
                android:id="@+id/details_activity_restaurant_name"
                android:layout_width="wrap_content"
                android:maxWidth="212dp"
                android:layout_height="40dp"
                android:paddingStart="15dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/whiteText"
                android:maxLines="1"
                tools:text="Sunshine Restaurant"
                android:gravity="center"/>

            <RatingBar
                android:id="@+id/details_activity_ratingBar"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/Base.Widget.AppCompat.RatingBar.Small"
                android:theme="@style/RatingBar"
                android:isIndicator="true"
                android:numStars="3"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/details_activity_restaurant_address"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingStart="15dp"
            android:gravity="center|start"
            android:maxLines="1"
            android:textColor="@color/whiteText"
            tools:text="17B, rue du grand chateau - Japanese food"
            android:background="@color/go4lunchPrimary" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/text_section">

        <Button
            android:id="@+id/details_activity_restaurant_call_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/filled_phone_icon"
            android:drawablePadding="10dp"
            android:text="@string/dialogRestaurant_call"
            android:background="@android:color/transparent"
            android:padding="15dp" />

        <Button
            android:id="@+id/details_activity_restaurant_like_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/filled_star_border_icon"
            android:drawablePadding="10dp"
            android:text="@string/dialogRestaurant_like"
            android:background="@android:color/transparent"
            android:padding="15dp" />

        <Button
            android:id="@+id/details_activity_restaurant_website_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/filled_public_icon"
            android:drawablePadding="10dp"
            android:text="@string/dialogRestaurant_website"
            android:background="@android:color/transparent"
            android:padding="15dp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/button_section"
        android:background="@color/go4lunchDivider" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/details_activity_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="255dp"
        android:layout_below="@id/button_section"
        android:layout_alignParentBottom="true"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/details_activity_floating_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="313dp"
        android:layout_marginTop="273dp"
        android:layout_marginEnd="40dp"
        android:focusable="true"
        app:layout_anchorGravity="right|bottom"
        android:src="@drawable/round_restaurant_menu_white_24"/>
</RelativeLayout>